--- a/packages/plugin-quickswap/package.json
+++ b/packages/plugin-quickswap/package.json
@@ -34,6 +34,7 @@
     "@elizaos/core": "workspace:*",
     "@elizaos/plugin-sql": "workspace:*",
     "ethers": "^6.13.1",
+    "quickswap-sdk": "^3.0.38",
     "zod": "3.24.2"
   },
   "devDependencies": {
