--- a/packages/plugin-quickswap/tsconfig.json
+++ b/packages/plugin-quickswap/tsconfig.json
@@ -23,7 +23,8 @@
     "baseUrl": ".",
     "paths": {
       "@elizaos/core": ["../../core/src"],
-      "@elizaos/core/*": ["../../core/src/*"]
+      "@elizaos/core/*": ["../../core/src/*"],
+      "quickswap-sdk": ["../../node_modules/quickswap-sdk"]
     }
   },
   "include": ["src/**/*.ts"]
