--- a/packages/plugin-quickswap/tsconfig.json
+++ b/packages/plugin-quickswap/tsconfig.json
@@ -25,7 +25,8 @@
       "@elizaos/core": ["../../core/src"],
       "@elizaos/core/*": ["../../core/src/*"],
       "quickswap-sdk": ["../../node_modules/quickswap-sdk"]
-    }
+    },
+    "types": ["node", "vitest/globals"]
   },
   "include": ["src/**/*.ts"]
 }
