--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "dist"
   ],
   "dependencies": {
-    "@elizaos/cli": "1.0.7",
-    "@elizaos/core": "^1.0.7",
-    "@elizaos/plugin-bootstrap": "^1.0.7",
-    "@elizaos/plugin-openai": "1.0.3",
-    "@elizaos/plugin-sql": "^1.0.7",
+    "@elizaos/cli": "1.0.9",
+    "@elizaos/core": "^1.0.9",
+    "@elizaos/plugin-bootstrap": "^1.0.9",
+    "@elizaos/plugin-openai": "^1.0.4",
+    "@elizaos/plugin-sql": "^1.0.9",
     "@elizaos/plugin-zerion": "^0.25.6-alpha.1",
     "viem": "^2.30.6",
     "zod": "3.24.2"
@@ -61,7 +61,6 @@
   },
   "gitHead": "b165ad83e5f7a21bc1edbd83374ca087e3cd6b33",
   "patchedDependencies": {
-    "@elizaos/plugin-openai@1.0.3": "patches/@elizaos%2Fplugin-openai@1.0.3.patch",
-    "@elizaos/plugin-bootstrap@1.0.7": "patches/@elizaos%2Fplugin-bootstrap@1.0.7.patch"
+    "@elizaos/plugin-openai@1.0.4": "patches/@elizaos%2Fplugin-openai@1.0.4.patch"
   }
 }
