updates to bootstrap and core

--- a/packages/plugin-bootstrap/package.json
+++ b/packages/plugin-bootstrap/package.json
@@ -27,6 +27,7 @@
   ],
   "dependencies": {
     "@elizaos/core": "workspace:*",
+    "@elizaos/plugin-anthropic": "1.0.3",
     "@elizaos/plugin-sql": "workspace:*"
   },
   "devDependencies": {
