--- a/.github/workflows/integrationTests.yaml
+++ b/.github/workflows/integrationTests.yaml
@@ -59,6 +59,9 @@ jobs:
           SHARP_IGNORE_GLOBAL_LIBVIPS: '1'
         run: bun install
 
+      - name: Clear Turbo cache for CLI
+        run: turbo run build --filter=@elizaos/cli --force
+
       - name: Build packages
         run: bun run build
 
@@ -69,7 +72,7 @@ jobs:
             node_modules
             packages/*/dist
             packages/*/build
-          key: integration-build-${{ runner.os }}-${{ github.sha }}
+          key: integration-build-${{ runner.os }}-${{ github.sha }}-v2
 
   # Validation job - runs in parallel
   validate:
@@ -96,7 +99,7 @@ jobs:
             node_modules
             packages/*/dist
             packages/*/build
-          key: integration-build-${{ runner.os }}-${{ github.sha }}
+          key: integration-build-${{ runner.os }}-${{ github.sha }}-v2
 
       - name: Install global packages
         run: npm install -g @anthropic-ai/claude-code
@@ -143,7 +146,7 @@ jobs:
             node_modules
             packages/*/dist
             packages/*/build
-          key: integration-build-${{ runner.os }}-${{ github.sha }}
+          key: integration-build-${{ runner.os }}-${{ github.sha }}-v2
 
       - name: Install global packages
         run: npm install -g @anthropic-ai/claude-code
