remove all caching in CIs

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,24 +27,8 @@ jobs:
         with:
           node-version: '23'
 
-      - name: Cache Bun dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-            node_modules
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
-
       - name: Install dependencies
         run: bun install
-
-      - name: Cache installed dependencies
-        uses: actions/cache/save@v4
-        with:
-          path: node_modules
-          key: deps-${{ runner.os }}-${{ github.sha }}
 
   # Test job - runs in parallel
   test:
@@ -65,11 +49,8 @@ jobs:
         with:
           node-version: '23'
 
-      - name: Restore dependencies
-        uses: actions/cache/restore@v4
-        with:
-          path: node_modules
-          key: deps-${{ runner.os }}-${{ github.sha }}
+      - name: Install dependencies
+        run: bun install
 
       - name: Create test env file
         run: |
@@ -96,11 +77,8 @@ jobs:
         with:
           node-version: '23'
 
-      - name: Restore dependencies
-        uses: actions/cache/restore@v4
-        with:
-          path: node_modules
-          key: deps-${{ runner.os }}-${{ github.sha }}
+      - name: Install dependencies
+        run: bun install
 
       - name: Check format
         run: bun run format:check
@@ -125,11 +103,8 @@ jobs:
         with:
           node-version: '23'
 
-      - name: Restore dependencies
-        uses: actions/cache/restore@v4
-        with:
-          path: node_modules
-          key: deps-${{ runner.os }}-${{ github.sha }}
+      - name: Install dependencies
+        run: bun install
 
       - name: Build packages
         run: bun run build && bun run build:docs
