--- a/.github/workflows/client-cypress-tests.yml
+++ b/.github/workflows/client-cypress-tests.yml
@@ -41,16 +41,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # ── Restore Turborepo local cache ───────────────────────────────
-      - name: Restore Turbo cache
-        uses: actions/cache@v4
-        with:
-          path: .turbo
-          key: |
-            ${{ runner.os }}-turbo-${{ hashFiles('turbo.json', '**/bun.lock', '**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-turbo-
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -61,28 +51,10 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Cache Bun dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-            node_modules
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
-
-      - name: Cache Cypress binary
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/Cypress
-          key: ${{ runner.os }}-cypress-${{ hashFiles('packages/client/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-cypress-
-
       - name: Install dependencies
         run: bun install
 
-      - name: Build packages (Turbo cached)
+      - name: Build packages
         run: bun run build
 
       - name: Install Cypress binary
@@ -118,16 +90,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # ── Restore Turborepo local cache ───────────────────────────────
-      - name: Restore Turbo cache
-        uses: actions/cache@v4
-        with:
-          path: .turbo
-          key: |
-            ${{ runner.os }}-turbo-${{ hashFiles('turbo.json', '**/bun.lock', '**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-turbo-
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -138,28 +100,10 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Cache Bun dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-            node_modules
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
-
-      - name: Cache Cypress binary
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/Cypress
-          key: ${{ runner.os }}-cypress-${{ hashFiles('packages/client/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-cypress-
-
       - name: Install dependencies
         run: bun install
 
-      - name: Build packages (Turbo cached)
+      - name: Build packages
         run: bun run build
 
       - name: Install Cypress binary
