--- a/.github/workflows/tauri-ci.yml
+++ b/.github/workflows/tauri-ci.yml
@@ -36,16 +36,6 @@ jobs:
       - name: Install Bun
         uses: oven-sh/setup-bun@v2
 
-      - name: Cache Bun dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            $HOME/.bun/install/cache
-            node_modules
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
-
       - name: Install dependencies
         run: bun install
         env:
@@ -53,14 +43,6 @@ jobs:
 
       - name: Build packages
         run: bun run build
-
-      - name: Cache build artifacts
-        uses: actions/cache/save@v4
-        with:
-          path: |
-            packages/*/dist
-            packages/*/build
-          key: tauri-build-${{ github.sha }}
 
   # Platform-specific builds run in parallel
   test-build:
@@ -96,34 +78,11 @@ jobs:
           file $(which bun) || true
         shell: bash
 
-      - name: Restore build artifacts
-        uses: actions/cache/restore@v4
-        with:
-          path: |
-            packages/*/dist
-            packages/*/build
-          key: tauri-build-${{ github.sha }}
-
-      - name: Cache Bun dependencies (platform-specific)
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-            node_modules
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
-
       - name: Setup Rust
         run: |
           rustup update stable
           rustup default stable
         shell: bash
-
-      - name: Rust cache
-        uses: swatinem/rust-cache@v2
-        with:
-          workspaces: './packages/app/src-tauri -> target'
 
       - name: Install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-latest'
@@ -147,6 +106,9 @@ jobs:
         run: bun install
         env:
           NPM_CONFIG_IGNORE_SCRIPTS: true
+
+      - name: Build packages
+        run: bun run build
 
       - name: Run TypeScript check
         run: |
