--- a/.github/workflows/plugin-sql-tests.yaml
+++ b/.github/workflows/plugin-sql-tests.yaml
@@ -15,8 +15,8 @@ on:
 
 jobs:
   databaseIntegrationTests:
-    # Skip duplicate runs: run on push to main/develop branches, or on pull_request_target events only
-    if: github.event_name == 'pull_request_target' || (github.event_name == 'push' && contains(fromJson('["main", "develop"]'), github.ref_name))
+    # Run on pull_request_target events or push events
+    if: github.event_name == 'pull_request_target' || github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
