--- a/packages/plugin-starter/cypress/tsconfig.json
+++ b/packages/plugin-starter/cypress/tsconfig.json
@@ -1,8 +1,9 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "target": "es2015",
     "lib": ["es2015", "dom"],
+    "jsx": "react",
     "types": ["cypress", "@testing-library/cypress"],
     "isolatedModules": false
   },
