rename bootstrap to message hndling, split tasks out

--- a/packages/project-starter/package.json
+++ b/packages/project-starter/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "@elizaos/cli": "workspace:*",
     "@elizaos/core": "workspace:*",
-    "@elizaos/plugin-bootstrap": "workspace:*",
+    "@elizaos/plugin-message-handling": "workspace:*",
     "@elizaos/plugin-discord": "1.0.10",
     "@elizaos/plugin-sql": "workspace:*",
     "@tanstack/react-query": "^5.29.0",
@@ -63,9 +63,7 @@
     "lint": "prettier --write ./src",
     "type-check": "tsc --noEmit",
     "type-check:watch": "tsc --noEmit --watch",
-    "test:component": "vitest run",
-    "test:e2e": "elizaos test",
-    "test": "npm run test:component && npm run test:e2e",
+    "test": "elizaos test",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest",
     "format": "prettier --write ./src",
