--- a/packages/plugin-starter/package.json
+++ b/packages/plugin-starter/package.json
@@ -62,11 +62,8 @@
     "dev": "elizaos dev",
     "build": "tsc --noEmit && vite build && tsup",
     "lint": "prettier --write ./src",
-    "test:component": "vitest run",
-    "test:e2e": "elizaos test",
-    "test:e2e:manual": "node scripts/test-e2e-manual.js",
     "test:cypress": "cypress run --component",
-    "test": "npm run test:component && npm run test:e2e",
+    "test": "elizaos test && npm run test:cypress",
     "publish": "elizaos publish",
     "format": "prettier --write ./src",
     "format:check": "prettier --check ./src"
