--- a/packages/plugin-starter/package.json
+++ b/packages/plugin-starter/package.json
@@ -43,14 +43,14 @@
     "@elizaos/core": "^1.0.0",
     "tailwindcss": "^4.1.10",
     "vite": "^6.3.5",
-    "zod": "3.24.2"
+    "zod": "^3.25.67"
   },
   "peerDependencies": {},
   "devDependencies": {
     "@cypress/react": "^9.0.1",
     "@elizaos/cli": "^1.0.0",
     "@testing-library/cypress": "^10.0.3",
-    "cypress": "^14.4.1",
+    "cypress": "^14.5.0",
     "dotenv": "16.4.5",
     "prettier": "3.5.3",
     "tsup": "8.5.0",
@@ -62,8 +62,7 @@
     "dev": "elizaos dev",
     "build": "tsc --noEmit && vite build && tsup",
     "lint": "prettier --write ./src",
-    "test:cypress": "cypress run --component",
-    "test": "elizaos test && npm run test:cypress",
+    "test": "elizaos test",
     "publish": "elizaos publish",
     "format": "prettier --write ./src",
     "format:check": "prettier --check ./src"
