--- a/packages/project-starter/package.json
+++ b/packages/project-starter/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.6",
   "type": "module",
   "private": true,
-  "main": "dist/src/index.js",
-  "module": "dist/src/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "keywords": [
     "project",
@@ -20,7 +20,7 @@
     ".": {
       "import": {
         "types": "./dist/index.d.ts",
-        "default": "./dist/src/index.js"
+        "default": "./dist/index.js"
       }
     }
   },
