feat: implement Phase 2 unified configuration management
- Create comprehensive configuration system in server package with package.json integration
- Add unified environment variable registry and plugin validation
- Implement CLI delegation to server configuration management
- Add package.json eliza field support for meta configuration
- Update starter packages with eliza configuration examples
- Eliminate ~400+ lines of duplicate configuration code
- Maintain full backward compatibility while improving type safety

Resolves Phase 2 of #5168: Unified configuration management with package.json integration

--- a/packages/plugin-starter/package.json
+++ b/packages/plugin-starter/package.json
@@ -71,6 +71,9 @@
     "format": "prettier --write ./src",
     "format:check": "prettier --check ./src"
   },
+  "eliza": {
+    "type": "plugin"
+  },
   "publishConfig": {
     "access": "public"
   },
