--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -14,18 +14,11 @@
     "outDir": "./dist",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": false,
+    "strict": true,
     "noImplicitAny": false,
     "resolveJsonModule": true,
-    "typeRoots": ["./node_modules/@types", "../../../node_modules/@types"],
     "types": ["node"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": [
-    "node_modules", 
-    "dist",
-    "src/**/*.test.ts",
-    "src/**/*.test.tsx",
-    "src/__tests__/**/*"
-  ]
+  "exclude": ["node_modules", "dist", "src/**/*.test.ts", "src/**/*.test.tsx", "src/__tests__/**/*"]
 }
