feat: Enhance logging capabilities in CLI
- Introduced new logging options: --log-level, --log-transport, --log-file, and --log-json for better control over log output.
- Updated README and CLI documentation to reflect new logging features and examples.
- Implemented file logging setup and JSON format support for consistent log output.
- Added logger command for interactive logging configuration.
- Expanded test command to include logger tests, ensuring comprehensive testing of logging functionality.

--- a/packages/server/tsconfig.build.json
+++ b/packages/server/tsconfig.build.json
@@ -12,6 +12,8 @@
     "**/*.test.tsx",
     "**/*.spec.ts",
     "**/*.spec.tsx",
+    "**/*.cy.ts",
+    "**/*.cy.tsx",
     "src/__tests__/**/*",
     "src/test-utils/**/*",
     "src/setup.ts"
