fix: unit and integration tests

--- a/packages/plugin-sql/package.json
+++ b/packages/plugin-sql/package.json
@@ -54,10 +54,11 @@
     "clean": "rm -rf dist .turbo node_modules .turbo-tsconfig.json tsconfig.tsbuildinfo",
     "format": "prettier --write .",
     "format:check": "prettier --check ./src",
-    "test": "bun test",
-    "test:watch": "bun test --watch",
-    "test:coverage": "bun test --coverage",
-    "test:integration": "bun test __tests__/integration",
+    "test": "bun test src/__tests__/unit",
+    "test:watch": "bun test --watch src/__tests__/unit",
+    "test:coverage": "bun test --coverage src/__tests__/unit",
+    "test:integration": "bun run scripts/run-tests-sequential.ts",
+    "test:all": "bun run test && bun run test:integration",
     "test:postgres": "POSTGRES_URL=postgresql://postgres:cT5nfCeebBS8R0q3@db.mwyntrazuakaieibjuvo.supabase.co:5432/postgres bun test",
     "build:clean": "rm -rf dist",
     "lint:fix": "eslint . --fix"
