--- a/packages/autodoc/package.json
+++ b/packages/autodoc/package.json
@@ -14,7 +14,8 @@
     "clean": "rm -rf dist .turbo node_modules .turbo-tsconfig.json tsconfig.tsbuildinfo",
     "lint": "prettier --write ./src",
     "format": "prettier --write ./src",
-    "format:check": "prettier --check ./src"
+    "format:check": "prettier --check ./src",
+    "test": "vitest run"
   },
   "keywords": [],
   "author": "",
@@ -39,7 +40,8 @@
     "prettier": "3.5.3",
     "ts-node": "10.9.2",
     "tslib": "2.8.1",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "vitest": "^1.3.1"
   },
   "gitHead": "dc32785668d1663c0e7fb81909b4b9961db6e6de"
 }
