--- a/packages/plugin-alethea/package.json
+++ b/packages/plugin-alethea/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@elizaos/cli": "workspace:*",
     "@elizaos/core": "workspace:*",
+    "@snapshot-labs/snapshot.js": "^0.8.2",
     "ethers": "^6.14.0",
     "zod": "3.24.2"
   },
