--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -101,6 +101,7 @@
     "@clack/prompts": "^0.11.0",
     "@electric-sql/pglite": "^0.3.2",
     "@elizaos/core": "workspace:*",
+    "@elizaos/plugin-bootstrap": "^1.0.11",
     "@elizaos/plugin-local-ai": "latest",
     "@elizaos/plugin-message-handling": "workspace:*",
     "@elizaos/plugin-sql": "workspace:*",
