--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -59,11 +59,13 @@
     "@types/express": "^5.0.2",
     "@types/helmet": "^4.0.0",
     "@types/multer": "^1.4.13",
+    "axios": "^1.10.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
     "multer": "^2.0.1",
     "path-to-regexp": "^8.2.0",
+    "sharp": "^0.34.2",
     "socket.io": "^4.8.1"
   }
 }
