--- a/packages/hyperfy/.env.example
+++ b/packages/hyperfy/.env.example
@@ -1,36 +1,54 @@
-# The world folder to run
-WORLD=world
-
-# The port the server runs on 
+# Server Configuration
 PORT=3000
-
-# The secret the server uses to create/parse json web tokens
-JWT_SECRET=hyper
-
-# The code used to become admin in the world (type /admin <code> in chat)
-# If left blank, everyone is an admin!
-ADMIN_CODE=
-
-# How often the world saves (seconds) 
-# Can be set to 0 to disable saving
+WS_PORT=3001
+WORLD=world
 SAVE_INTERVAL=60
 
-# Whether players should collide with other players
-PUBLIC_PLAYER_COLLISION=false
+# Feature Flags
+ENABLE_RPG=false
 
-# The maximum upload file size for models etc (mb)
-PUBLIC_MAX_UPLOAD_SIZE=12
+# ==========================================
+# SERVER-ONLY SECRETS (Never expose to client)
+# ==========================================
 
-# The public web socket url the client connects to
-PUBLIC_WS_URL=ws://localhost:3000/ws
+# Authentication Secret - Used for JWT tokens
+# Generate a secure random string for production
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
-# The public url used by clients to access api (eg upload assets)
-PUBLIC_API_URL=http://localhost:3000/api
+# Admin Code - Used to grant admin access via /admin command
+# Leave empty to allow everyone to be admin (dev mode)
+ADMIN_CODE=
 
-# The public url used by clients to fetch assets
-PUBLIC_ASSETS_URL=http://localhost:3000/assets
-
-# LiveKit (voice chat)
-LIVEKIT_URL=
-LIVEKIT_API_KEY=
+# LiveKit API Secret - Used to generate access tokens on the server
+# Get this from your LiveKit dashboard
 LIVEKIT_API_SECRET=
+
+# ==========================================
+# CLIENT-SAFE VARIABLES (Can be exposed to client)
+# ==========================================
+
+# LiveKit Configuration
+LIVEKIT_URL=wss://your-livekit-instance.livekit.cloud
+LIVEKIT_API_KEY=your-livekit-api-key
+
+# Public URLs
+PUBLIC_API_URL=http://localhost:3000
+PUBLIC_ASSETS_URL=/assets/
+PUBLIC_MAX_UPLOAD_SIZE=104857600
+
+# Hyperfy Configuration
+HYPERFY_ASSETS_URL=
+HYPERFY_ASSETS_DIR=
+HYPERFY_NETWORK_RATE=8
+HYPERFY_MAX_DELTA_TIME=0.033333
+HYPERFY_FIXED_DELTA_TIME=0.016666
+HYPERFY_LOG_LEVEL=info
+HYPERFY_PHYSICS_ENABLED=true
+HYPERFY_GRAVITY_X=0
+HYPERFY_GRAVITY_Y=-9.81
+HYPERFY_GRAVITY_Z=0
+
+# Build Configuration
+CLIENT_BUILD_DIR=
+NO_CLIENT_SERVE=
+COMMIT_HASH=
