--- a/package.json
+++ b/package.json
@@ -75,8 +75,7 @@
     "@types/hapi": "^18.0.14",
     "node-opus": "^0.3.3",
     "opusscript": "^0.1.1",
-    "vittest": "^1.0.2",
-    "zod": "3.24.1"
+    "vittest": "^1.0.2"
   },
   "packageManager": "bun@1.2.5",
   "workspaces": [
@@ -87,7 +86,7 @@
   "resolutions": {
     "@nrwl/devkit": "19.8.13",
     "@nrwl/tao": "19.8.13",
-    "zod": "3.24.1",
+    "zod": "3.25.32",
     "eslint": "9.22.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
