--- a/packages/plugin-bootstrap/package.json
+++ b/packages/plugin-bootstrap/package.json
@@ -33,7 +33,7 @@
     "prettier": "3.5.3",
     "tsup": "8.4.0",
     "vitest": "^1.6.1",
-    "zod": "^3.22.4"
+    "zod": "3.25.32"
   },
   "scripts": {
     "build": "tsup",
