fix: add openai to agent file and env examples

--- a/.env.example
+++ b/.env.example
@@ -92,11 +92,17 @@ COINMARKETCAP_API_KEY=
 ZEROEX_API_KEY=
 COINGECKO_API_KEY=
 
+# alethea plugin required variables
+ALETHEA_RPC_URL=https://placeholder.xyz
+PRIVATE_KEY=placeholder
+ALETHEA_API_KEY=placeholder
+POD_NFT_CONTRACT_ADDRESS=0x0123456789abcdef0123456789abcdef01234567
+
 # Required environment variables for @elizaos/plugin-polygon
 POLYGON_PLUGINS_ENABLED=false
 # RPC Endpoints
-POLYGON_RPC_URL="https://polygon-rpc.com" # Replace with your actual Polygon PoS RPC URL (e.g., from Alchemy, Infura, QuickNode)
-ETHEREUM_RPC_URL="https://mainnet.infura.io/v3/YOUR_INFURA_PROJECT_ID" # Replace with your actual Ethereum Mainnet RPC URL
+POLYGON_RPC_URL="https://polygon-bor.publicnode.com" # Replace with your actual Polygon PoS RPC URL (e.g., from Alchemy, Infura, QuickNode)
+ETHEREUM_RPC_URL="https://ethereum-rpc.publicnode.com" # Replace with your actual Ethereum Mainnet RPC URL
 
 
 # PolygonScan API Key (Optional but recommended for reliable gas estimates)
@@ -108,3 +114,5 @@ POLYGONSCAN_KEY="YourPolygonScanApiKeyToken"
 
 ALCHEMY_API_KEY='y-D7nwZRV1szosU0qgB77'
 ZKEVM_RPC_URL='https://polygonzkevm-mainnet.g.alchemy.com/v2/'
+
+HEIMDALL_RPC_URL="https://heimdall-api.polygon.technology"
