--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:app": "turbo run start --filter=./packages/app",
     "dev": "bun run scripts/dev-watch.js",
     "build:docs": "turbo run build --filter=@elizaos/docs",
-    "build": "turbo run build --filter=!@elizaos/docs --filter=@elizaos/scenarios",
+    "build": "turbo run build --filter=!@elizaos/docs",
     "build:client": "turbo run build --filter=@elizaos/client",
     "format": "turbo run format --filter=./packages/*",
     "format:check": "turbo run format:check --filter=./packages/*",
@@ -31,10 +31,7 @@
     "docker:bash": "bash ./scripts/docker.sh bash",
     "docker:start": "bash ./scripts/docker.sh start",
     "docker": "bun docker:build && bun docker:run && bun docker:bash",
-    "test": "turbo run test --concurrency 3 --filter=!./packages/plugin-starter --filter=!./packages/project-starter --filter=!./packages/docs --filter=!@elizaos/plugin-sql",
-    "test:client": "turbo run test --filter=./packages/client",
-    "test:core": "turbo run test --filter=./packages/core",
-    "test:app": "turbo run test --concurrency 5 --filter=./packages/app",
+    "test": "turbo run test --concurrency 1 --filter=!./packages/docs",
     "prepare": "husky"
   },
   "packageManager": "bun@1.2.15",
