feat: implement server factory pattern and enhance server structure

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -30,6 +30,9 @@
   },
   "scripts": {
     "build": "tsup",
+    "start": "bun run src/start.ts",
+    "dev": "bun run src/start.ts",
+    "serve": "bun run src/start.ts",
     "type-check": "tsc --project tsconfig.build.json --noEmit",
     "lint": "prettier --write ./src",
     "format": "prettier --write ./src",
