--- a/.env.example
+++ b/.env.example
@@ -116,3 +116,7 @@ ALCHEMY_API_KEY='y-D7nwZRV1szosU0qgB77'
 ZKEVM_RPC_URL='https://polygonzkevm-mainnet.g.alchemy.com/v2/'
 
 HEIMDALL_RPC_URL="https://heimdall-api.polygon.technology"
+
+# ROFL
+ROFL_PLUGIN_ENABLED=true  # Enable this to run the ROFL plugin
+MOCK_ROFL_SERVICE=true # Only use locally to mock the ROFL appd API
