--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -75,6 +75,7 @@
     "@anthropic-ai/sdk": "^0.54.0",
     "@clack/prompts": "^0.11.0",
     "@elizaos/core": "workspace:*",
+    "@elizaos/plugin-openai": "1.0.6",
     "@elizaos/plugin-sql": "workspace:*",
     "@elizaos/server": "workspace:*",
     "bun": "^1.2.17",
