fix: resolve Ubuntu CLI test parallelization issues
- Force sequential test execution on Ubuntu CI with --no-parallelism flag
- Add dynamic port allocation system to prevent port conflicts
- Enhance cleanup script with better process termination and verification
- Add Ubuntu-specific sleep delays and timeouts for test stability
- Update test configuration to be more conservative on Ubuntu CI
- Implement proper cleanup delays and process synchronization

This should resolve race conditions and port conflicts that were causing
test failures on Ubuntu CI while maintaining performance on other platforms.

--- a/.github/workflows/cli-tests.yml
+++ b/.github/workflows/cli-tests.yml
@@ -149,8 +149,15 @@ jobs:
 
       - name: Run CLI TypeScript tests (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        timeout-minutes: 15
-        run: cross-env NODE_OPTIONS="--max-old-space-size=4096" bun test tests/commands/ --timeout 240000; EXIT_CODE=$?; bash tests/cleanup-processes.sh; exit $EXIT_CODE
+        timeout-minutes: 20
+        run: |
+          sleep 3
+          cross-env NODE_OPTIONS="--max-old-space-size=4096" bun test tests/commands/ --timeout 240000 --bail --no-parallelism
+          EXIT_CODE=$?
+          sleep 2
+          bash tests/cleanup-processes.sh
+          sleep 1
+          exit $EXIT_CODE
         working-directory: packages/cli
         env:
           ELIZA_TEST_MODE: true
