fix: simplify Ubuntu CI test approach with proper sequential execution
- Remove invalid --no-parallelism flag and complex port allocator
- Implement proper sequential test execution by running test files individually
- Use process ID-based port allocation for simple conflict avoidance
- Add proper cleanup between each test file
- Increase timeout to 25 minutes for sequential execution
- Maintain sleep delays for process stabilization

--- a/bunfig.toml
+++ b/bunfig.toml
@@ -7,8 +7,7 @@ timeout = 60000
 coverage = true
 
 # Test execution configuration
-# Force sequential execution on Ubuntu CI to prevent port conflicts
-concurrent = false
+# Note: Sequential execution for Ubuntu CI is handled in the CI workflow
 
 [install]
 # Optimize installation for CI
