fix: final Ubuntu CI fix with simplified approach
- Revert to running all tests together but with better cleanup
- Increase timeout to 300 seconds per test and 30 minutes total
- Add pre-cleanup and post-cleanup with sleep delays
- Use --bail 1 to stop on first failure for faster feedback
- Keep enhanced cleanup script and timeouts for stability

--- a/.github/workflows/cli-tests.yml
+++ b/.github/workflows/cli-tests.yml
@@ -149,21 +149,21 @@ jobs:
 
       - name: Run CLI TypeScript tests (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        timeout-minutes: 25
+        timeout-minutes: 30
         run: |
+          # Pre-cleanup
+          bash tests/cleanup-processes.sh
+          sleep 5
+
+          # Run tests with extended timeouts and better cleanup
+          cross-env NODE_OPTIONS="--max-old-space-size=4096" bun test tests/commands/ --timeout 300000 --bail 1
+          EXIT_CODE=$?
+
+          # Post-cleanup
           sleep 3
-          EXIT_CODE=0
-          for test_file in tests/commands/*.test.ts; do
-            echo "Running test file: $test_file"
-            cross-env NODE_OPTIONS="--max-old-space-size=4096" bun test "$test_file" --timeout 240000 || EXIT_CODE=$?
-            sleep 2
-            bash tests/cleanup-processes.sh
-            sleep 2
-            if [ $EXIT_CODE -ne 0 ]; then
-              echo "Test failed: $test_file"
-              break
-            fi
-          done
+          bash tests/cleanup-processes.sh
+          sleep 2
+
           exit $EXIT_CODE
         working-directory: packages/cli
         env:
