--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "tsup": "8.4.0",
+    "typescript": "5.8.3",
     "prettier": "3.5.3",
     "vitest": "3.1.4",
     "@vitest/coverage-v8": "2.1.5"
