feat: add comprehensive CLI testing infrastructure
- Add CLI test runner utility with command validation
- Implement documentation parser for CLI commands
- Create validation tests for core CLI functionality
- Add integration tests for complex CLI scenarios
- Include performance tests for CLI responsiveness
- Add error handling tests for graceful failures
- Implement test setup utilities for CI/CD integration
- Add CLI command documentation
- Update package.json with new test scripts

Resolves #5325: CLI testing infrastructure for automated validation

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,7 +50,11 @@
     "test:types": "tsc --noEmit",
     "coverage": "c8 --reporter=lcov --reporter=text bun test",
     "coverage:html": "c8 --reporter=html bun test && open coverage/index.html",
-    "test:cli": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" bun test tests/commands/ --timeout 120000; EXIT_CODE=$?; bash tests/cleanup-processes.sh; exit $EXIT_CODE"
+    "test:cli": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" bun test tests/commands/ --timeout 120000; EXIT_CODE=$?; bash tests/cleanup-processes.sh; exit $EXIT_CODE",
+    "test:cli-validation": "bun test tests/commands/cli-validation.test.ts --timeout 60000",
+    "test:cli-integration": "bun test tests/integration/cli-integration.test.ts --timeout 120000",
+    "test:cli-runner": "bun run tests/cli-test-runner.ts",
+    "test:cli-all": "./tests/run-cli-tests.sh"
   },
   "devDependencies": {
     "@types/bun": "^1.2.17",
