add suggestions; refactor prompts; added helper SQLs

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@elizaos/plugin-bootstrap": "^1.0.15",
     "@elizaos/plugin-openai": "1.0.6",
     "@elizaos/plugin-sql": "^1.0.15",
-    "@elizaos/plugin-zerion": "^0.25.6-alpha.1",
+    "patchright": "1.50.1",
     "viem": "^2.30.6",
     "zod": "3.24.2"
   },
