--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-  "version": "1.0.19",
-  "packages": ["packages/*"],
+  "version": "1.0.21",
+  "packages": [
+    "packages/*"
+  ],
   "npmClient": "bun",
   "command": {
     "publish": {
