--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elizaos/api-client",
-  "version": "1.0.19",
+  "version": "1.0.21",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/index.js",
@@ -20,9 +20,9 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/node": "latest",
-    "typescript": "^5.7.2",
     "eslint": "^8.57.0",
-    "tsup": "^8.5.0"
+    "tsup": "^8.5.0",
+    "typescript": "^5.7.2"
   },
   "files": [
     "dist"
