enable twitter and telegram

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".cursor"]
 	path = .cursor
 	url = https://github.com/elizaOS/.cursor
+[submodule "packages/plugin-telegram"]
+	path = packages/plugin-telegram
+	url = git@github.com:WAUIO/eliza-plugin-telegram.git
