--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -54,7 +54,7 @@
   },
   "gitHead": "1ef5379a22a2007dd0ddee7ed06243263c82c225",
   "dependencies": {
-    "@elizaos/client": "1.1.6",
+    "@elizaos/client": "workspace:*",
     "@elizaos/core": "^1.1.7-beta.0",
     "@elizaos/plugin-sql": "^1.1.7-beta.0",
     "@types/express": "^5.0.2",
