--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elizaos/api-client",
-  "version": "1.1.7-beta.1",
+  "version": "1.1.7-alpha.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/index.js",
@@ -15,7 +15,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@elizaos/core": "^1.1.7-beta.1"
+    "@elizaos/core": "^1.1.7-alpha.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
