--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elizaos/core",
-  "version": "1.1.7-beta.1",
+  "version": "1.1.7-alpha.0",
   "description": "",
   "type": "module",
   "main": "dist/index.js",
