--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elizaos/server",
-  "version": "1.1.7-beta.1",
+  "version": "1.1.7-alpha.0",
   "description": "ElizaOS Server - Core server infrastructure for ElizaOS agents",
   "publishConfig": {
     "access": "public",
@@ -54,9 +54,8 @@
   },
   "gitHead": "1ef5379a22a2007dd0ddee7ed06243263c82c225",
   "dependencies": {
-    "@elizaos/client": "workspace:*",
-    "@elizaos/core": "^1.1.7-beta.1",
-    "@elizaos/plugin-sql": "^1.1.7-beta.1",
+    "@elizaos/core": "^1.1.7-alpha.0",
+    "@elizaos/plugin-sql": "^1.1.7-alpha.0",
     "@types/express": "^5.0.2",
     "@types/helmet": "^4.0.0",
     "@types/multer": "^1.4.13",
