--- a/packages/project-starter/package.json
+++ b/packages/project-starter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@elizaos/project-starter",
   "description": "Project starter for elizaOS",
-  "version": "1.1.6",
+  "version": "1.1.7-beta.2",
   "type": "module",
   "private": true,
   "main": "dist/src/index.js",
