--- a/packages/plugin-forms/package.json
+++ b/packages/plugin-forms/package.json
@@ -45,9 +45,8 @@
   ],
   "dependencies": {
     "@elizaos/core": "workspace:*",
-    "@elizaos/plugin-discord": "1.0.10",
-    "@elizaos/plugin-telegram": "1.0.4",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "zod": "3.23.8"
   },
   "peerDependencies": {},
   "devDependencies": {
