--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,7 +50,9 @@
     "test:types": "tsc --noEmit",
     "coverage": "c8 --reporter=lcov --reporter=text bun test",
     "coverage:html": "c8 --reporter=html bun test && open coverage/index.html",
-    "test:cli": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" bun test tests/commands/ --timeout 120000; EXIT_CODE=$?; bash tests/cleanup-processes.sh; exit $EXIT_CODE"
+    "test:cli": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" bun test tests/commands/ --timeout 120000; EXIT_CODE=$?; bash tests/cleanup-processes.sh; exit $EXIT_CODE",
+    "check:cli-coverage": "bun run scripts/check-cli-coverage.ts",
+    "test:cli-docs-coverage": "bun test tests/commands/cli-docs-coverage.test.ts"
   },
   "devDependencies": {
     "@types/bun": "^1.2.17",
