--- a/packages/plugin-sql/package.json
+++ b/packages/plugin-sql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elizaos/plugin-sql",
-  "version": "1.2.1",
+  "version": "1.0.12",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -23,42 +23,48 @@
   },
   "files": [
     "dist",
-    "drizzle"
+    "drizzle",
+    "extensions"
   ],
   "dependencies": {
-    "@electric-sql/pglite": "^0.3.3",
-    "@elizaos/core": "1.2.1",
-    "drizzle-kit": "^0.31.1",
+    "@electric-sql/pglite": "^0.3.4",
+    "@elizaos/core": "workspace:*",
+    "@elizaos/plugin-discord": "1.0.10",
+    "@elizaos/plugin-telegram": "1.0.4",
+    "@types/pg": "8.11.10",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.30.4",
     "drizzle-orm": "^0.44.2",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "pgvector": "^0.2.1",
+    "postgres": "^3.4.4",
+    "sqlite-vec": "^0.1.7-alpha.2",
+    "sqlite-vec-darwin-arm64": "^0.1.7-alpha.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
-    "@types/node": "^24.0.3",
-    "@types/pg": "8.15.4",
+    "@types/node": "^22.15.3",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "dockerode": "^4.0.4",
     "eslint": "^9.28.0",
+    "glob": "^11.0.3",
+    "ms": "^2.1.3",
     "prettier": "3.5.3",
-    "tsup": "8.5.0",
-    "typescript": "5.8.3",
-    "typescript-eslint": "^8.26.0"
+    "typescript-eslint": "^8.26.0",
+    "zod": "^3.22.4"
   },
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "migrate:generate": "drizzle-kit generate",
-    "migrate": "tsup src/migrate.ts --format esm --clean=false --onSuccess=\"node dist/migrate.js\"",
-    "lint": "eslint .",
-    "clean": "rm -rf dist .turbo node_modules .turbo-tsconfig.json tsconfig.tsbuildinfo",
-    "format": "prettier --write .",
-    "format:check": "prettier --check ./src",
-    "test": "bun test",
-    "test:watch": "bun test --watch",
-    "test:coverage": "bun test --coverage",
-    "test:integration": "bash scripts/run-integration-tests.sh",
-    "test:integration:fast": "bun test __tests__/integration --bail=5 --timeout=180000",
-    "test:postgres": "POSTGRES_URL=postgresql://postgres:cT5nfCeebBS8R0q3@db.mwyntrazuakaieibjuvo.supabase.co:5432/postgres bun test",
-    "build:clean": "rm -rf dist",
-    "lint:fix": "eslint . --fix"
+    "build": "bun run build.ts",
+    "dev": "bun run build.ts --watch",
+    "clean": "rm -rf dist && rm -rf .turbo",
+    "lint": "eslint src --fix && prettier --write ./src",
+    "typecheck": "tsc --noEmit",
+    "test": "bun test --timeout 30000 && elizaos test"
   },
-  "gitHead": "227798477b53ad38b01f147ac1a649a5d1c810a3"
+  "peerDependencies": {
+    "typescript": "5.8.3",
+    "whatwg-url": "7.1.0"
+  },
+  "gitHead": "d5bd5c43bfebeb7ac02f9e029f924cb6cd5c2ec7"
 }
