--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "postinstall": "bash ./scripts/init-submodules.sh",
     "start": "turbo run start --filter=./packages/cli --log-prefix=none",
+    "start:fresh": "rm -rf .turbo && turbo run start --filter=./packages/cli --log-prefix=none",
     "start:debug": "cross-env NODE_NO_WARNINGS=1 LOG_LEVEL=debug elizaos start",
     "start:app": "turbo run start --filter=./packages/app",
     "start:docs": "turbo run start --filter=@elizaos/docs",
