--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -75,7 +75,12 @@
     "@anthropic-ai/sdk": "^0.54.0",
     "@clack/prompts": "^0.11.0",
     "@elizaos/core": "1.2.1",
+    "@elizaos/plugin-discord": "1.0.11",
+    "@elizaos/plugin-ollama": "1.2.1",
+    "@elizaos/plugin-openai": "1.0.7",
     "@elizaos/plugin-sql": "1.2.1",
+    "@elizaos/plugin-twitter": "1.2.16",
+    "@elizaos/plugin-workflow": "workspace:*",
     "@elizaos/server": "1.2.1",
     "bun": "^1.2.17",
     "chalk": "^5.3.0",
