--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -62,6 +62,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
+    "reactflow": "^11.11.4",
     "remark-breaks": "^4.0.0",
     "semver": "^7.7.1",
     "shiki": "^3.6.0",
