--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -93,6 +93,6 @@
     "tsconfig-paths": "^4.2.0",
     "type-fest": "^4.41.0",
     "yoctocolors": "^2.1.1",
-    "zod": "^3.25.67"
+    "zod": "3.22.4"
   }
 }
