--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -77,6 +77,7 @@
     "@elizaos/core": "1.2.9",
     "@elizaos/plugin-sql": "1.2.9",
     "@elizaos/server": "1.2.9",
+    "@types/lodash": "^4.17.20",
     "bun": "^1.2.17",
     "chalk": "^5.3.0",
     "chokidar": "^4.0.3",
@@ -85,6 +86,7 @@
     "fs-extra": "^11.1.0",
     "globby": "^14.0.2",
     "https-proxy-agent": "^7.0.6",
+    "lodash": "^4.17.21",
     "ora": "^8.1.1",
     "rimraf": "6.0.1",
     "semver": "^7.7.2",
