refactor(scenarios): align mock engine with ticket design

--- a/test-mocks.scenario.yaml
+++ b/test-mocks.scenario.yaml
@@ -6,7 +6,8 @@ setup:
   mocks:
     - service: e2b
       method: executeCode
-      args: ["echo 'conditional'"]
+      when:
+        args: ["echo 'conditional'"]
       response:
         stdout: "conditional mock response"
         stderr: ""
