--- a/packages/plugin-starter/package.json
+++ b/packages/plugin-starter/package.json
@@ -46,7 +46,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
     "vite": "^6.3.5",
-    "zod": "3.24.2"
+    "zod": "^3.25.32"
   },
   "devDependencies": {
     "@elizaos/cli": "1.2.10",
@@ -76,7 +76,7 @@
     "access": "public"
   },
   "resolutions": {
-    "zod": "3.24.2"
+    "zod": "^3.25.32"
   },
   "agentConfig": {
     "pluginType": "elizaos:plugin:1.0.0",
