--- a/docker/targets/dev/Dockerfile
+++ b/docker/targets/dev/Dockerfile
@@ -1,11 +1,11 @@
-a# Development Container for ElizaOS Monorepo
-# Supports workspace dependencies and hot reload via volume mounts
+# Full Development Container for ElizaOS Monorepo
+# Workspace is volume-mounted at runtime for complete development capabilities
 
-FROM node:23.3.0-slim AS builder
+FROM node:23.3.0-slim
 
 WORKDIR /app
 
-# Install system dependencies (matching upstream requirements)
+# Install system dependencies for full development
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     build-essential \
@@ -15,69 +15,29 @@ RUN apt-get update && \
     git \
     make \
     python3 \
-    unzip && \
-    apt-get clean && \
+    unzip \
+    && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Install bun and turbo globally (matching upstream)
-RUN npm install -g bun@1.2.5 turbo@2.3.3
-
-# Create python symlink (matching upstream)
-RUN ln -s /usr/bin/python3 /usr/bin/python
-
-# Copy monorepo configuration files (essential for workspace deps)
-COPY package.json turbo.json tsconfig.json lerna.json renovate.json .npmrc ./
-COPY scripts ./scripts
-COPY packages ./packages
-
-# Install dependencies using bun (workspace-aware)
-RUN bun install --frozen-lockfile
-
-# Build workspace packages (ensures @elizaos/core is available)
-RUN bun run build
-
-# Set git config for container
-RUN git config --global --add safe.directory /app
-
-# Create eliza user directory structure  
-RUN mkdir -p /home/eliza/agent
-
-# Development stage - optimized for hot reload
-FROM node:23.3.0-slim AS development
-
-WORKDIR /app
-
-# Install system dependencies for runtime
-RUN apt-get update && apt-get install -y \
-    git \
-    curl \
-    ffmpeg \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install bun and turbo
+# Install bun and turbo globally
 RUN npm install -g bun@1.2.5 turbo@2.3.3
 
 # Create python symlink
 RUN ln -s /usr/bin/python3 /usr/bin/python
 
-# Copy built workspace from builder stage
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/packages ./packages
-COPY --from=builder /app/package.json ./package.json
-COPY --from=builder /app/turbo.json ./turbo.json
-COPY --from=builder /app/tsconfig.json ./tsconfig.json
-COPY --from=builder /app/lerna.json ./lerna.json
-COPY --from=builder /app/.npmrc ./.npmrc
-COPY --from=builder /app/scripts ./scripts
-
 # Set git config for container
 RUN git config --global --add safe.directory /app
 
 # Create eliza user directory structure  
 RUN mkdir -p /home/eliza/agent
 
+# Set development environment
+ENV NODE_ENV=development
+ENV LOG_LEVEL=debug
+ENV DEV_MODE=true
+
 # Expose development ports
 EXPOSE 3000 3001 5173 9229
 
-# Default command for development (can be overridden)
+# Default command - workspace will be mounted and built at runtime
 CMD ["bun", "run", "dev"]
