--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -75,6 +75,9 @@
     "@anthropic-ai/sdk": "^0.54.0",
     "@clack/prompts": "^0.11.0",
     "@elizaos/core": "1.3.0",
+    "@elizaos/plugin-anthropic": "1.0.4",
+    "@elizaos/plugin-ollama": "1.2.1",
+    "@elizaos/plugin-openai": "1.0.8",
     "@elizaos/plugin-sql": "1.3.0",
     "@elizaos/server": "1.3.0",
     "bun": "^1.2.17",
